--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.0b3 - unreleased
 ------------------
 
-* Plone 4+ imports (removes warnings under Plone 4.1)
+* Zope 2.13 imports (removes warnings under Plone 4.1)
+  [thomasdesvenain]
 
 1.0b2 - 2010-09-02
 ------------------
