--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+* Use widgets view class attributes in the template.
+  [romanofski]
 
 
 1.0 (2011-06-29)
